# Surface-Heat-Diffuse-Skinning

./: .gitignore  CMakeLists.txt  example.js  index.html  package-lock.json  package.json
src/: main-nice.cpp  main.bk.cpp  main.cpp  mian-bk2.cpp  raytri.cpp  tribox.cpp  wasm-module.js
